@@ -1,3 +1,4 @@
+1.0.1-6 @08/23/2006 23:50:00 UTC@
 1.0.1-5 @08/10/2006 14:05:00 UTC@
 1.0.1-4 @07/13/2006 22:10:00 UTC@
 1.0.1-3 @04/21/2006 14:35:00 UTC@
