@@ -43,6 +43,7 @@
 
 #include <sstream>
 #include <prio.h>
+#include <private/pprio.h>
 #include <prinrval.h>
 
 #include <vpr/Util/Error.h>
@@ -75,7 +76,7 @@ vpr::ReturnStatus SocketDatagramImplNSPR::recvfrom(void* msg,
    }
    else if ( bytes == -1 )
    {
-      PRErrorCode err_code = PR_GetError();
+      const PRErrorCode err_code = PR_GetError();
 
       bytesRead = 0;
 
@@ -85,6 +86,13 @@ vpr::ReturnStatus SocketDatagramImplNSPR::recvfrom(void* msg,
       }
       else if ( err_code == PR_IO_TIMEOUT_ERROR )
       {
+#if defined(WINNT)
+         // Handle the case of a timeout error on an NT socket. We have to
+         // tell NSPR to put the socket back into the right state. We do not
+         // need to worry about whether the socket is blocking because the
+         // timeout is ignored by non-blocking NSPR sockets.
+         PR_NT_CancelIo(mHandle);
+#endif
          retval.setCode(ReturnStatus::Timeout);
       }
       else if ( err_code == PR_CONNECT_ABORTED_ERROR )
@@ -129,7 +137,7 @@ vpr::ReturnStatus SocketDatagramImplNSPR::sendto(const void* msg,
 
    if ( bytes == -1 )
    {
-      PRErrorCode err_code = PR_GetError();
+      const PRErrorCode err_code = PR_GetError();
 
       bytesSent = 0;
 
@@ -139,6 +147,13 @@ vpr::ReturnStatus SocketDatagramImplNSPR::sendto(const void* msg,
       }
       else if ( err_code == PR_IO_TIMEOUT_ERROR )
       {
+#if defined(WINNT)
+         // Handle the case of a timeout error on an NT socket. We have to
+         // tell NSPR to put the socket back into the right state. We do not
+         // need to worry about whether the socket is blocking because the
+         // timeout is ignored by non-blocking NSPR sockets.
+         PR_NT_CancelIo(mHandle);
+#endif
          retval.setCode(ReturnStatus::Timeout);
       }
       else if ( err_code == PR_CONNECT_ABORTED_ERROR )
