@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-08-23 patrick  Fixed bugs in the NSPR socket classes related to timeouts
+                    on blocking sockets when using the WINNT configuration of
+                    NSPR.
 2006-08-10 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
 2006-07-13 patrick  Implemented automatic linking of the VPR library.
 2006-07-11 patrick  Link against the dynamic version of the Boost.Filesystem
